# spiritual_yomiage

./: .gitignore  README.md  main.py  pyproject.toml
archive/: main.py
images/: sample.spng
inputs/: sub1.sample
