[project]
name = "zatsugaku"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ryoto Ogawa", email = "71643807+ryotoitoi@users.noreply.github.com" }
]
dependencies = [
    "openai-whisper>=20240930",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zatsugaku"]
